# python-rriot

./: README.md  pyproject.toml  requirements_dev.txt
.devcontainer/: Dockerfile  devcontainer.json
rriot/: basic_api.py  hawk_api.py
tests/: __init__.py  constants.py  test_basic_api.py  test_hawk_api.py  test_rriot.py  test_rriot_data.py
